# Master_thesis

./: .gitignore  5_categories.py  70_runs.py  All_attr_exp.py  Bimodal_framework.ipynb  Bimodal_framework_modular.ipynb  DEMetro_test.py  comparison_post_creation.ipynb  environment.yml  global_run.py  init_point_tests.ipynb  initvals_testing.ipynb  mc-fit-suite.ipynb  mc-fit-suite.py  mcmc_benchmark_choose_posterior.ipynb  mcmc_benchmark_framework.ipynb  mcmc_benchmark_general.ipynb  mcmc_benchmark_general.py  mcmc_benchmark_general_2.py  mcmc_benchmark_general_exp_1.py  middle_test.py  new_run.py  no_MM_30_runs.py  pyproject.toml  report.html  run_experiment.py  test.ipynb  test_visuell.ipynb  testrun.py
Heatmap_generator/: New_generator.ipynb  combo_spec_2.yaml  combo_spec_3.yaml  combo_spec_4.yaml  create_heatmap.ipynb
all_configs/: multimodal.yaml  mv_normal_mixture.yaml  test_sorted_1d.yaml  unimodal.yaml
config_1_with_3_runs/: metadata_config_1.json
config_1_with_6_runs/: metadata_config_1.json
exp_DEMetro_test/: summary.txt
exp_DEMetro_test_iterated_mode_distance/: summary.txt
exp_Second_experiment_20_chains_plus_DEMetropolis_testcases/: summary.txt
exp_Vergleich_relative/: summary.txt
exp_cauchy_2/: summary.txt
exp_cauchy_test/: summary.txt
exp_g++ test/: summary.txt
exp_geht init scheme?/: summary.txt
exp_gloabal_test/: summary.txt
exp_high/: summary.txt
exp_iid_mean_big?/: summary.txt
exp_middle_and _assym_weights/: summary.txt
exp_multi/: summary.txt
exp_multiiii/: summary.txt
exp_neu_muti/: summary.txt
misc/: Sinus.ipynb  (+22 more)
(+45233 files in other folders)
